// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid Tests should show <GifGrid /> correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`GifGrid Tests should show items when images are loaded useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GridGifItem
      id="ABC"
      key="ABC"
      title="Title"
      url="https://localhost/img.jpg"
    />
  </div>
</Fragment>
`;
